logout and api/me
